[tool.poetry]
name = "mlx-server"
version = "0.1.0"
description = ""
authors = ["bukacdan <daniel.bukac99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.1"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
